# EasyNN

./: CMakeLists.txt  README.md  diary.md
documents/: Layer类和Blob的设计.md  Mat类的设计.md  Net类的设计.md  optional类与benckmark.md  内存分配.md  测试框架.md
example/: CMakeLists.txt  res18.cpp  yolov5s.cpp  yolov5s_2.cpp
src/: CMakeLists.txt  allocator.h  benchmark.cpp  benchmark.h  blob.cpp  blob.h  ir.cpp  ir.h  layer.cpp  layer.h  main.cpp  mat.cpp  mat.h  net.cpp  net.h  nncuda.cpp  nncuda.cu  nncuda.h  optional.cpp  optional.h  register_layers.h  storezip.cpp  storezip.h
src/layers/: adaptiveavgpool.cpp  adaptiveavgpool.h  cat.cpp  cat.h  contiguous.cpp  convolution.cpp  convolution.h  expression.cpp  expression.h  flatten.cpp  flatten.h  flatter.cpp  linear.cpp  linear.h  maxpool.cpp  maxpool.h  output.h  permute.cpp  permute.h  relu.cpp  relu.h  silu.cpp  silu.h  upsample.cpp  upsample.h  view.cpp  view.h
src/layers/cuda/: cuda_gemm.cu  cuda_gemm.h  cuda_linear.cu  cuda_linear.h  cuda_relu.cu  cuda_relu.h  cuda_silu.cu  cuda_silu.h
src/layers/cxx/: adaptiveavgpool.cpp  adaptiveavgpool.h  cat.cpp  contiguous.cpp  contiguous.h  convolution.cpp  convolution.h  expression.h  flatten.cpp  input.cpp  input.h  linear.cpp  linear.h  maxpool.cpp  maxpool.h  output.cpp  relu.cpp  relu.h  silu.cpp  view.cpp
test/: CMakeLists.txt  test.cpp  test_adaptiveavgpool.h  test_cat.h  test_conv.h  test_cuda_silu.h  test_expression.h  test_flatten.h  test_fun.h  test_im2col.h  test_layer.h  test_linear.h  test_mat.cpp  test_mat.h  test_maxpool2d.h  test_permute.h  test_pnnx.h  test_relu.h  test_silu.h  test_ulti.h  test_upsample.h  test_view.h
